--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <body class="h-screen overflow-hidden">
+    <body class="h-screen overflow-hidden font-sans">
         <div class="flex h-screen overflow-hidden">
 
             <!-- Overlay for Mobile -->
