pixel perfect footer

--- a/index.html
+++ b/index.html
@@ -179,7 +179,6 @@
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
-
                         <!-- Card 1 -->
                         <a href="/success-rate"
                             class="flex flex-col items-center justify-center p-6 gap-3 bg-white rounded-lg shadow border border-gray-100 hover:border-blue-500/50 transition-colors">
@@ -245,14 +244,12 @@
             </main>
 
             <!-- Footer -->
-            <footer class="bg-white border-t border-gray-200 py-4 px-6">
+            <footer class="footer bg-white border-t border-gray-200">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center gap-2">
-                        <svg class="h-5 w-5 text-blue-600" fill="none" stroke="currentColor">
-                            <circle cx="12" cy="12" r="10" stroke-width="2" />
-                        </svg>
-                        <span class="text-sm font-semibold">IDBox™ Service Monitoring</span>
-                        <span class="text-xs text-gray-500">v.2.1</span>
+                        <i class="fa-regular fa-circle-user text-[#2563EB] span-text text-xl"></i>
+                        <span class="text-sm font-semibold text-[#2563EB] span-text">IDBox™ Service Monitoring</span>
+                        <span class="text-xs text-gray-500 leading-normal">v.2.1</span>
                     </div>
                     <div class="text-sm text-gray-500">
                         © <span id="year"></span> Intelli Group All rights reserved
