--- a/index.html
+++ b/index.html
@@ -370,12 +370,17 @@
 
             <!-- Charts -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
-              <div class="chart-container">
-                <div id="chart"></div>
+              <!-- Chart Container -->
+              <div
+                class="chart-container w-full p-4 rounded-2xl shadow-md bg-white"
+              >
+                <div id="chart" class="mt-[-30px] h-[400px] w-full"></div>
                 <div class="custom-legend" id="legend"></div>
               </div>
+
+              <!-- Bar Chart Card -->
               <div
-                class="bg-white rounded-xl d-flex justify-content-center align-items-center flex justify-center p-6 shadow-sm hover:shadow-md transition-shadow duration-300 min-h-[350px] w-full max-w-4xl mx-auto"
+                class="bg-white rounded-xl flex justify-center items-center p-6 shadow-sm hover:shadow-md transition-shadow duration-300 min-h-[350px] w-full mx-auto"
               >
                 <div id="barChartContainer" class="w-full h-[320px]"></div>
               </div>
