--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               <!-- Card 1 -->
               <a
                 href="/success-rate"
-                class="flex flex-col items-center justify-center p-6 gap-3 bg-white rounded-lg shadow border border-gray-100 hover:border-blue-500/50 transition-colors"
+                class="flex-card flex flex-col items-center justify-center p-6 gap-3 bg-white rounded-lg shadow border border-gray-100 hover:border-blue-500/50 transition-colors"
               >
                 <div class="bg-blue-500/10 p-3 rounded-full">
                   <svg
@@ -425,7 +425,7 @@
               <!-- Card 2 -->
               <a
                 href="/transactions"
-                class="flex flex-col items-center justify-center p-6 gap-3 bg-white rounded-lg shadow border border-gray-100 hover:border-blue-500/50 transition-colors"
+                class="flex-card flex flex-col items-center justify-center p-6 gap-3 bg-white rounded-lg shadow border border-gray-100 hover:border-blue-500/50 transition-colors"
               >
                 <div class="bg-blue-500/10 p-3 rounded-full">
                   <svg
