--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
               <!-- Chart Container -->
               <div
-                class="chart-container w-full p-4 rounded-2xl shadow-md bg-white"
+                class="chart-container w-full p-4 rounded-2xl shadow-sm hover:shadow-md transition-shadow duration-300 bg-white"
               >
                 <div id="chart" class="mt-[-30px] h-[400px] w-full"></div>
                 <div class="custom-legend" id="legend"></div>
