--- a/testing.html
+++ b/testing.html
@@ -1,149 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Highcharts 3D Bar Chart</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://code.highcharts.com/highcharts.js"></script>
-  <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-</head>
-<body class="bg-gray-100 font-sans p-10">
 
-  <div class="bg-white rounded-xl p-6 shadow-sm hover:shadow-md transition-shadow duration-300 min-h-[350px] w-full max-w-4xl mx-auto">
-    <div id="barChartContainer" class="w-full h-[320px]"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Settings Page</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Custom Tailwind utility for 'primary' color */
+    .bg-primary {
+      @apply bg-blue-600;
+    }
+
+    .bg-primary\/90 {
+      background-color: rgba(37, 99, 235, 0.9);
+    }
+
+    .peer:checked~.peer-checked\:bg-primary {
+      background-color: #2563eb;
+    }
+  </style>
+</head>
+
+<body class="p-6 font-sans bg-gray-50">
+  <div class="mb-6">
+    <h1 class="text-2xl font-bold text-gray-800">Settings</h1>
+    <p class="text-gray-500">Manage your application settings</p>
   </div>
 
-  <script>
-    const responseRates = [
-      { name: "Between 0 And 5 Minutes", value: 84.47, color: "#2196F3" },
-      { name: "Between 5 And 6 Minutes", value: 7.23, color: "#4CAF50" },
-      { name: "Between 6 And 7 Minutes", value: 3.25, color: "#FF9800" },
-      { name: "Between 7 And 10 Minutes", value: 3.55, color: "#FF9800" },
-      { name: "More than 10 Minutes", value: 1.5, color: "#F44336" }
-    ];
+  <div class="p-6 bg-white rounded-lg shadow">
+    <div class="space-y-6">
+      <div class="pb-4 border-b">
+        <h2 class="mb-2 text-lg font-medium">General Settings</h2>
+        <p class="text-sm text-gray-500">Configure basic application settings</p>
+      </div>
 
-    Highcharts.chart('barChartContainer', {
-      chart: {
-        type: 'bar',
-        options3d: {
-          enabled: true,
-          alpha: 15,
-          beta: 15,
-          depth: 50,
-          viewDistance: 25
-        },
-        backgroundColor: 'transparent',
-        style: {
-          fontFamily: 'Inter, sans-serif'
-        },
-        animation: {
-          duration: 1000
-        }
-      },
-      title: {
-        text: 'Response Time Distribution',
-        align: 'left',
-        style: {
-          fontSize: '18px',
-          fontWeight: '600',
-          color: '#1e293b'
-        },
-        margin: 24
-      },
-      credits: {
-        enabled: false
-      },
-      xAxis: {
-        categories: responseRates.map(d => d.name),
-        labels: {
-          style: {
-            fontSize: '13px',
-            color: '#64748b',
-            fontWeight: '500'
-          },
-          useHTML: true,
-          formatter: function () {
-            return `<span style="max-width: 100px; display: inline-block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${this.value}</span>`;
-          }
-        },
-        gridLineWidth: 0,
-        lineColor: '#e2e8f0',
-        tickLength: 0
-      },
-      yAxis: {
-        min: 0,
-        max: 100,
-        title: { text: null },
-        labels: {
-          style: {
-            fontSize: '13px',
-            color: '#64748b',
-            fontWeight: '500'
-          },
-          formatter: function () {
-            return this.value + '%';
-          }
-        },
-        gridLineWidth: 1,
-        gridLineColor: '#e2e8f0',
-        lineColor: '#e2e8f0',
-        tickLength: 0
-      },
-      legend: {
-        enabled: false
-      },
-      plotOptions: {
-        bar: {
-          depth: 40,
-          groupZPadding: 10,
-          grouping: false,
-          borderRadius: 4,
-          states: {
-            hover: {
-              brightness: 0.1
-            }
-          },
-          dataLabels: {
-            enabled: true,
-            format: '{y:.1f}%',
-            style: {
-              fontSize: '12px',
-              fontWeight: '500',
-              color: '#1e293b',
-              textOutline: 'none'
-            },
-            align: 'center',
-            verticalAlign: 'top',
-            y: -10
-          }
-        }
-      },
-      tooltip: {
-        backgroundColor: 'rgba(255, 255, 255, 0.95)',
-        borderWidth: 0,
-        borderRadius: 8,
-        shadow: true,
-        style: {
-          fontSize: '14px',
-          color: '#1e293b'
-        },
-        formatter: function () {
-          return `<b>${this.x}</b><br/>${this.y.toFixed(1)}%`;
-        }
-      },
-      series: [{
-        name: 'Response Time',
-        data: responseRates.map(d => ({
-          y: d.value,
-          color: d.color,
-          selected: false
-        })),
-        animation: {
-          duration: 1000
-        }
-      }]
-    });
-  </script>
+      <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
+        <!-- User Interface Section -->
+        <div>
+          <h3 class="mb-3 font-medium text-md">User Interface</h3>
+          <div class="space-y-4">
+            <div class="flex items-center justify-between">
+              <span class="text-gray-700">Language</span>
+              <select class="px-3 py-2 bg-white border rounded">
+                <option>English</option>
+                <option>Greek</option>
+                <option>Spanish</option>
+              </select>
+            </div>
+            <div class="flex items-center justify-between">
+              <span class="text-gray-700">Theme</span>
+              <select class="px-3 py-2 bg-white border rounded">
+                <option>Light</option>
+                <option>Dark</option>
+                <option>System</option>
+              </select>
+            </div>
+          </div>
+        </div>
 
+        <!-- Notifications Section -->
+        <div>
+          <h3 class="mb-3 font-medium text-md">Notifications</h3>
+          <div class="space-y-4">
+            <div class="flex items-center justify-between">
+              <span class="text-gray-700">Email Alerts</span>
+              <label class="relative inline-flex items-center cursor-pointer">
+                <input type="checkbox" class="sr-only peer" />
+                <div
+                  class="w-11 h-6 bg-gray-200 rounded-full peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 peer peer-checked:bg-blue-600 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:after:translate-x-full peer-checked:after:border-white">
+                </div>
+              </label>
+            </div>
+            <div class="flex items-center justify-between">
+              <span class="text-gray-700">System Notifications</span>
+              <label class="relative inline-flex items-center cursor-pointer">
+                <input type="checkbox" class="sr-only peer" checked />
+                <div
+                  class="w-11 h-6 bg-gray-200 rounded-full peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 peer peer-checked:bg-blue-600 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:after:translate-x-full peer-checked:after:border-white">
+                </div>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="pt-4 border-t">
+        <button class="px-4 py-2 text-white transition-colors bg-blue-600 rounded hover:bg-blue-700">
+          Save Settings
+        </button>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
