--- a/settings.html
+++ b/settings.html
@@ -121,7 +121,7 @@
                     <span class="sidebar-label">Transactions</span>
                 </a>
                 <a href="/settings.html" title="Settings"
-                    class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
+                    class="flex items-center gap-2 px-3 py-2 font-semibold text-gray-700 transition rounded sidebar-item active hover:bg-gray-100">
                     <i class="fa-solid fa-gear text-[#2563EB]"></i>
                     <span class="sidebar-label text-[#2563EB]">Settings</span>
                 </a>
@@ -193,8 +193,8 @@
                                 <div>
                                     <h3 class="mb-3 font-medium text-md">Notifications</h3>
                                     <div class="space-y-4">
-                                        <div class="flex items-center justify-between">
-                                            <span class="text-gray-700">Email Alerts</span>
+                                        <div class="flex items-center justify-between mt-2">
+                                            <span class="mt-2 text-gray-700">Email Alerts</span>
                                             <label class="relative inline-flex items-center cursor-pointer">
                                                 <input type="checkbox" class="sr-only peer" />
                                                 <div
@@ -203,7 +203,7 @@
                                             </label>
                                         </div>
                                         <div class="flex items-center justify-between">
-                                            <span class="text-gray-700">System Notifications</span>
+                                            <span class="mt-3 text-gray-700">System Notifications</span>
                                             <label class="relative inline-flex items-center cursor-pointer">
                                                 <input type="checkbox" class="sr-only peer" checked />
                                                 <div
